--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-config-prettier": "^6.6.0",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-prettier": "^3.1.1",
+		"prettier": "^1.19.1"
 	}
 }
