--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,11 @@
 	"rules": {
 		"prettier/prettier": "error"
 	},
+	"env": {
+		"browser": true,
+		"es6": true,
+		"jest": true
+	},
 	"settings": {
 		"import/resolver": {
 			"node": {
