--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "yarn run lint:fix",
-			"pre-push": "yarn run lint"
+			"pre-commit": "yarn run lint"
 		}
 	}
 }
