--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
 	"extends": "react-app",
 	"plugins": ["prettier"],
 	"rules": {
-		"prettier/prettier": "error"
+		"indent": ["error", "tab"]
 	},
 	"env": {
 		"browser": true,
