--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,15 @@
 {
+	"printWidth": 100,
+	"tabWidth": 4,
 	"singleQuote": true,
 	"trailingComma": "es5",
-	"semi": true,
-	"tabWidth": 3,
-	"useTabs": true
+	"overrides": [
+		{
+			"files": "*.{json,yml}",
+			"options": {
+				"tabWidth": 2,
+				"singleQuote": false
+			}
+		}
+	]
 }
