--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "3.2.0",
-		"styled-components": "^4.4.1"
+		"styled-components": "^4.4.1",
+		"tone": "^14.7.77"
 	},
 	"scripts": {
 		"start": "react-scripts start",
